--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="cs-main_header_center">
               <div class="cs-nav cs-primary_font cs-medium">
                 <ul class="cs-nav_list">
-                  <li class="menu-item-has-children cs-mega_menu">
+                  <li class="cs-mega_menu">
                     <a href="index.html">Home</a>
                   </li>
                   <li>
