--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Laralink">
     <!-- Favicon Icon -->
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/logos/dcc.png">
     <!-- Site Title -->
     <title>Dahcrown Creations - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -34,94 +34,8 @@
             <div class="cs-main_header_center">
               <div class="cs-nav cs-primary_font cs-medium">
                 <ul class="cs-nav_list">
-                  <li class="menu-item-has-children cs-mega_menu">
+                  <li cs-mega_menu">
                     <a href="index.html">Home</a>
-                    <ul class="cs-mega_wrapper">
-                      <li>
-                        <ul>
-                          <li>
-                            <a href="index.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/main-home.jpeg" alt="" />
-                            </a>
-                            <a href="index.html">Main Home</a>
-                          </li>
-                          <li>
-                            <a href="showcase-portfolio.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/showcase.jpeg" alt="" />
-                            </a>
-                            <a href="showcase-portfolio.html">Showcase Portfolio</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <ul>
-                          <li>
-                            <a href="photography-agency.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/photography-agency.jpeg" alt="" />
-                            </a>
-                            <a href="photography-agency.html">Photography Agency</a>
-                          </li>
-                          <li>
-                            <a href="case-study-showcase.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/case_study_showcase.jpeg" alt="" />
-                            </a>
-                            <a href="case-study-showcase.html">Case Study Showcase</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <ul>
-                          <li>
-                            <a href="creative-portfolio.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/portfolio.jpeg" alt="" />
-                            </a>
-                            <a href="creative-portfolio.html">Creative Portfolio</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <ul>
-                          <li>
-                            <a href="digital-agency.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/digital-agency.jpeg" alt="" />
-                            </a>
-                            <a href="digital-agency.html">Digital Agency</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <ul>
-                          <li>
-                            <a href="marketing-agency.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/marketing.jpeg" alt="" />
-                            </a>
-                            <a href="marketing-agency.html">Marketing Agency</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <ul>
-                          <li>
-                            <a href="freelancer-agency.html" class="cs-nav_list_img">
-                              <img src="assets/img/demo/freelancer-agency.jpeg" alt="" />
-                              <span class="cs-header_badge">New</span>
-                            </a>
-                            <a href="freelancer-agency.html">Freelancing Agency</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <ul>
-                          <li>
-                            <a href="https://arino-html-rtl.vercel.app" target="_blank" class="cs-nav_list_img">
-                              <img src="assets/img/demo/rtl.jpeg" alt="" />
-                              <span class="cs-header_badge">New</span>
-                            </a>
-                            <a href="https://arino-html-rtl.vercel.app" target="_blank">RTL Demo</a>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
                   </li>
                   <li>
                     <a href="about.html">About</a>
@@ -145,37 +59,6 @@
                       </li>
                       <li>
                         <a href="portfolio-details.html">Portfolio Details</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="blog.html">Blog</a>
-                    <ul>
-                      <li>
-                        <a href="blog.html">Blog</a>
-                      </li>
-                      <li>
-                        <a href="blog-details.html">Blog Details</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="#">Pages</a>
-                    <ul>
-                      <li>
-                        <a href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <a href="team.html">Team</a>
-                      </li>
-                      <li>
-                        <a href="team-details.html">Team Details</a>
-                      </li>
-                      <li>
-                        <a href="case-study.html">Case Study Details</a>
-                      </li>
-                      <li>
-                        <a href="faq.html">FAQ</a>
                       </li>
                     </ul>
                   </li>
@@ -280,7 +163,7 @@
             <li class="breadcrumb-item">
               <a href="index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active">About Us</li>
+            <li class="breadcrumb-item active">About Dahcrown Creations</li>
           </ol>
         </div>
       </div>
