--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Laralink">
   <!-- Favicon Icon -->
-  <link rel="icon" href="assets/img/favicon.png">
+  <link rel="icon" href="assets/img/logos/dcc.png">
   <!-- Site Title -->
   <title>Dahcrown Creations - Creative Agency</title>
   <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -381,90 +381,86 @@
   </section>
   <!-- End CTA -->
   <!-- Start Footer -->
-  <footer class="cs-fooer">
-    <div class="cs-fooer_main">
+     <footer class="cs-fooer">
+      <div class="cs-fooer_main">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-sm-6">
+              <div class="cs-footer_item">
+                <div class="cs-text_widget">
+                  <img src="assets/img/logos/DCC-FULL.png" alt="" />
+                  <p> Welcome to Dahcrown Creations, we use our creativity to empower your dreams. </p>
+                </div>
+                <div class="cs-social_btns cs-style1">
+                  <a href="https://www.linkedin.com/company/dahcrown-creations/" class="cs-center">
+                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M4.04799 13.7497H1.45647V5.4043H4.04799V13.7497ZM2.75084 4.2659C1.92215 4.2659 1.25 3.57952 1.25 2.75084C1.25 2.35279 1.40812 1.97105 1.68958 1.68958C1.97105 1.40812 2.35279 1.25 2.75084 1.25C3.14888 1.25 3.53063 1.40812 3.81209 1.68958C4.09355 1.97105 4.25167 2.35279 4.25167 2.75084C4.25167 3.57952 3.57924 4.2659 2.75084 4.2659ZM13.7472 13.7497H11.1613V9.68722C11.1613 8.71903 11.1417 7.4774 9.81389 7.4774C8.46652 7.4774 8.26004 8.5293 8.26004 9.61747V13.7497H5.67132V5.4043H8.15681V6.54269H8.19308C8.53906 5.887 9.38421 5.19503 10.6451 5.19503C13.2679 5.19503 13.75 6.92215 13.75 9.16546V13.7497H13.7472Z" fill="white" />
+                    </svg>
+                  </a>
+                  <a href="https://instagram.com/dahcrowncreations?igshid=YmMyMTA2M2Y=" class="cs-center">
+                    <svg width="15" height="15" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M22.801 0.452148H9.75674C4.09071 0.452148 0.712891 3.82997 0.712891 9.496V22.5247C0.712891 28.2063 4.09071 31.5842 9.75674 31.5842H22.7855C28.4515 31.5842 31.8293 28.2063 31.8293 22.5403V9.496C31.8449 3.82997 28.4671 0.452148 22.801 0.452148ZM16.2789 22.0578C12.9478 22.0578 10.2393 19.3493 10.2393 16.0182C10.2393 12.687 12.9478 9.97854 16.2789 9.97854C19.61 9.97854 22.3185 12.687 22.3185 16.0182C22.3185 19.3493 19.61 22.0578 16.2789 22.0578ZM25.494 8.04836C25.4161 8.23515 25.3072 8.40638 25.1671 8.56204C25.0114 8.70213 24.8402 8.81109 24.6534 8.88892C24.3701 9.00917 24.0574 9.04229 23.7552 8.98407C23.453 8.92585 23.175 8.77892 22.9567 8.56204C22.8166 8.40638 22.7077 8.23515 22.6298 8.04836C22.5499 7.86128 22.5076 7.66028 22.5053 7.45685C22.5053 7.25449 22.552 7.05213 22.6298 6.86534C22.7077 6.66298 22.8166 6.50732 22.9567 6.35166C23.3147 5.99365 23.8595 5.82242 24.3576 5.93138C24.4666 5.94695 24.56 5.97808 24.6534 6.02478C24.7468 6.05591 24.8402 6.10261 24.9336 6.16487C25.0114 6.21157 25.0892 6.2894 25.1671 6.35166C25.3072 6.50732 25.4161 6.66298 25.494 6.86534C25.5718 7.05213 25.6185 7.25449 25.6185 7.45685C25.6185 7.65921 25.5718 7.86157 25.494 8.04836Z"
+                        fill="white" />
+                    </svg>
+                  </a>
+
+
+                  <!-- OTHER LINKS ***  -->
+                  <!-- <a href="#" class="cs-center">
+                    <svg width="13" height="11" viewBox="0 0 13 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M11.4651 2.95396C11.4731 3.065 11.4731 3.17606 11.4731 3.2871C11.4731 6.67383 8.89535 10.5761 4.18402 10.5761C2.73255 10.5761 1.38421 10.1557 0.25 9.42608C0.456226 9.44986 0.654494 9.4578 0.868655 9.4578C2.06629 9.4578 3.16879 9.0533 4.04918 8.36326C2.92291 8.33946 1.97906 7.60183 1.65386 6.5866C1.81251 6.61038 1.97112 6.62624 2.1377 6.62624C2.36771 6.62624 2.59774 6.59451 2.81188 6.53901C1.63802 6.30105 0.757595 5.26996 0.757595 4.02472V3.99301C1.09864 4.18336 1.49524 4.30233 1.91558 4.31818C1.22554 3.85814 0.773464 3.07294 0.773464 2.1846C0.773464 1.70872 0.900344 1.27249 1.12244 0.891774C2.38355 2.44635 4.27919 3.46156 6.40481 3.57262C6.36516 3.38226 6.34136 3.184 6.34136 2.9857C6.34136 1.57388 7.4835 0.423828 8.90323 0.423828C9.64086 0.423828 10.3071 0.733156 10.7751 1.23284C11.354 1.1218 11.9093 0.907643 12.401 0.614185C12.2106 1.20906 11.8061 1.70875 11.2748 2.02598C11.7903 1.97049 12.29 1.82769 12.75 1.62942C12.4011 2.13702 11.9648 2.5891 11.4651 2.95396V2.95396Z" fill="white" />
+                    </svg>
+                  </a>
+                  <a href="#" class="cs-center">
+                    <svg width="13" height="9" viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.4888 1.48066C12.345 0.939353 11.9215 0.513038 11.3837 0.368362C10.4089 0.105469 6.5 0.105469 6.5 0.105469C6.5 0.105469 2.59116 0.105469 1.61633 0.368362C1.07853 0.513061 0.65496 0.939353 0.5112 1.48066C0.25 2.4618 0.25 4.50887 0.25 4.50887C0.25 4.50887 0.25 6.55595 0.5112 7.53709C0.65496 8.0784 1.07853 8.48695 1.61633 8.63163C2.59116 8.89452 6.5 8.89452 6.5 8.89452C6.5 8.89452 10.4088 8.89452 11.3837 8.63163C11.9215 8.48695 12.345 8.0784 12.4888 7.53709C12.75 6.55595 12.75 4.50887 12.75 4.50887C12.75 4.50887 12.75 2.4618 12.4888 1.48066V1.48066ZM5.22158 6.36746V2.65029L8.48861 4.50892L5.22158 6.36746V6.36746Z" fill="white" />
+                    </svg>
+                  </a> -->
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="cs-footer_item">
+                <h2 class="cs-widget_title">Services</h2>
+                <ul class="cs-menu_widget cs-mp0">
+                  <li>
+                    <a href="service-details.html">Business and Personal Branding</a>
+                  </li>
+                  <li>
+                    <a href="service-details.html">Web development</a>
+                  </li>
+                  <li>
+                    <a href="service-details.html">Writing </a>
+                  </li>
+                  <li>
+                    <a href="service-details.html">Marketing and Business Consultancy</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="cs-footer_item">
+                <h2 class="cs-widget_title">Contact Us</h2>
+                <ul class="cs-menu_widget cs-mp0">
+                  <li>+2348058509328</li>
+                  <li>+2348160846252</li>
+                  <li>dahcrowncreations@gmail.com</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-sm-6">
-            <div class="cs-footer_item">
-              <div class="cs-text_widget">
-                <img src="assets/img/footer_/logos/dcc-full.png" alt="">
-                <p>Welcome to arino sed ut perspiciae omunde omnis iste natus error sitort voluptatem accusantium.</p>
-              </div>
-              <div class="cs-social_btns cs-style1">
-                <a href="#" class="cs-center">
-                  <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4.04799 13.7497H1.45647V5.4043H4.04799V13.7497ZM2.75084 4.2659C1.92215 4.2659 1.25 3.57952 1.25 2.75084C1.25 2.35279 1.40812 1.97105 1.68958 1.68958C1.97105 1.40812 2.35279 1.25 2.75084 1.25C3.14888 1.25 3.53063 1.40812 3.81209 1.68958C4.09355 1.97105 4.25167 2.35279 4.25167 2.75084C4.25167 3.57952 3.57924 4.2659 2.75084 4.2659ZM13.7472 13.7497H11.1613V9.68722C11.1613 8.71903 11.1417 7.4774 9.81389 7.4774C8.46652 7.4774 8.26004 8.5293 8.26004 9.61747V13.7497H5.67132V5.4043H8.15681V6.54269H8.19308C8.53906 5.887 9.38421 5.19503 10.6451 5.19503C13.2679 5.19503 13.75 6.92215 13.75 9.16546V13.7497H13.7472Z" fill="white"/>
-                  </svg> 
-                </a>
-                <a href="#" class="cs-center">
-                  <svg width="13" height="11" viewBox="0 0 13 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M11.4651 2.95396C11.4731 3.065 11.4731 3.17606 11.4731 3.2871C11.4731 6.67383 8.89535 10.5761 4.18402 10.5761C2.73255 10.5761 1.38421 10.1557 0.25 9.42608C0.456226 9.44986 0.654494 9.4578 0.868655 9.4578C2.06629 9.4578 3.16879 9.0533 4.04918 8.36326C2.92291 8.33946 1.97906 7.60183 1.65386 6.5866C1.81251 6.61038 1.97112 6.62624 2.1377 6.62624C2.36771 6.62624 2.59774 6.59451 2.81188 6.53901C1.63802 6.30105 0.757595 5.26996 0.757595 4.02472V3.99301C1.09864 4.18336 1.49524 4.30233 1.91558 4.31818C1.22554 3.85814 0.773464 3.07294 0.773464 2.1846C0.773464 1.70872 0.900344 1.27249 1.12244 0.891774C2.38355 2.44635 4.27919 3.46156 6.40481 3.57262C6.36516 3.38226 6.34136 3.184 6.34136 2.9857C6.34136 1.57388 7.4835 0.423828 8.90323 0.423828C9.64086 0.423828 10.3071 0.733156 10.7751 1.23284C11.354 1.1218 11.9093 0.907643 12.401 0.614185C12.2106 1.20906 11.8061 1.70875 11.2748 2.02598C11.7903 1.97049 12.29 1.82769 12.75 1.62942C12.4011 2.13702 11.9648 2.5891 11.4651 2.95396V2.95396Z" fill="white"/>
-                  </svg>                    
-                </a>
-                <a href="#" class="cs-center">
-                  <svg width="13" height="9" viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12.4888 1.48066C12.345 0.939353 11.9215 0.513038 11.3837 0.368362C10.4089 0.105469 6.5 0.105469 6.5 0.105469C6.5 0.105469 2.59116 0.105469 1.61633 0.368362C1.07853 0.513061 0.65496 0.939353 0.5112 1.48066C0.25 2.4618 0.25 4.50887 0.25 4.50887C0.25 4.50887 0.25 6.55595 0.5112 7.53709C0.65496 8.0784 1.07853 8.48695 1.61633 8.63163C2.59116 8.89452 6.5 8.89452 6.5 8.89452C6.5 8.89452 10.4088 8.89452 11.3837 8.63163C11.9215 8.48695 12.345 8.0784 12.4888 7.53709C12.75 6.55595 12.75 4.50887 12.75 4.50887C12.75 4.50887 12.75 2.4618 12.4888 1.48066V1.48066ZM5.22158 6.36746V2.65029L8.48861 4.50892L5.22158 6.36746V6.36746Z" fill="white"/>
-                  </svg>                    
-                </a>
-                <a href="#" class="cs-center">
-                  <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M2.87612 8.149C2.87612 8.87165 2.28571 9.46205 1.56306 9.46205C0.840402 9.46205 0.25 8.87165 0.25 8.149C0.25 7.42634 0.840402 6.83594 1.56306 6.83594H2.87612V8.149ZM3.53795 8.149C3.53795 7.42634 4.12835 6.83594 4.851 6.83594C5.57366 6.83594 6.16406 7.42634 6.16406 8.149V11.4369C6.16406 12.1596 5.57366 12.75 4.851 12.75C4.12835 12.75 3.53795 12.1596 3.53795 11.4369V8.149ZM4.851 2.87612C4.12835 2.87612 3.53795 2.28571 3.53795 1.56306C3.53795 0.840402 4.12835 0.25 4.851 0.25C5.57366 0.25 6.16406 0.840402 6.16406 1.56306V2.87612H4.851V2.87612ZM4.851 3.53795C5.57366 3.53795 6.16406 4.12835 6.16406 4.851C6.16406 5.57366 5.57366 6.16406 4.851 6.16406H1.56306C0.840402 6.16406 0.25 5.57366 0.25 4.851C0.25 4.12835 0.840402 3.53795 1.56306 3.53795H4.851V3.53795ZM10.1239 4.851C10.1239 4.12835 10.7143 3.53795 11.4369 3.53795C12.1596 3.53795 12.75 4.12835 12.75 4.851C12.75 5.57366 12.1596 6.16406 11.4369 6.16406H10.1239V4.851V4.851ZM9.46205 4.851C9.46205 5.57366 8.87165 6.16406 8.149 6.16406C7.42634 6.16406 6.83594 5.57366 6.83594 4.851V1.56306C6.83594 0.840402 7.42634 0.25 8.149 0.25C8.87165 0.25 9.46205 0.840402 9.46205 1.56306V4.851V4.851ZM8.149 10.1239C8.87165 10.1239 9.46205 10.7143 9.46205 11.4369C9.46205 12.1596 8.87165 12.75 8.149 12.75C7.42634 12.75 6.83594 12.1596 6.83594 11.4369V10.1239H8.149ZM8.149 9.46205C7.42634 9.46205 6.83594 8.87165 6.83594 8.149C6.83594 7.42634 7.42634 6.83594 8.149 6.83594H11.4369C12.1596 6.83594 12.75 7.42634 12.75 8.149C12.75 8.87165 12.1596 9.46205 11.4369 9.46205H8.149Z" fill="white"/>
-                  </svg>                    
-                </a>
-              </div>
-            </div>
+        <div class="cs-bottom_footer">
+          <div class="cs-bottom_footer_left">
+            <div class="cs-copyright">Copyright © 2024 Dahcrown Creations.</div>
           </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="cs-footer_item">
-              <h2 class="cs-widget_title">Services</h2>
-              <ul class="cs-menu_widget cs-mp0">
-                <li><a href="service-details.html">UI/UX design</a></li>
-                <li><a href="service-details.html">WP development</a></li>
-                <li><a href="service-details.html">Digital marketing</a></li>
-                <li><a href="service-details.html">React development</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="cs-footer_item">
-              <h2 class="cs-widget_title">Contact Us</h2>
-              <ul class="cs-menu_widget cs-mp0">
-                <li>55/53 Jay Path Apt. 908</li>
-                <li>+44 454 7800 112</li>
-                <li>sbechtelar@example.net</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="cs-footer_item">
-              <h2 class="cs-widget_title">Subscribe</h2>
-              <div class="cs-newsletter cs-style1">
-                <form action="#" class="cs-newsletter_form">
-                  <input type="email" class="cs-newsletter_input" placeholder="example@gmail.com">
-                  <button class="cs-newsletter_btn"><span>Send</span></button>
-                </form>
-                <div class="cs-newsletter_text">At vero eos et accusamus et iusto odio as part dignissimos ducimus qui blandit.</div>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="cs-bottom_footer">
-        <div class="cs-bottom_footer_left">
-          <div class="cs-copyright">Copyright © 2023 Laralink.</div>
-        </div>
-        <div class="cs-bottom_footer_right">
-          <ul class="cs-footer_links cs-mp0">
-            <li><a href="">Terms of Use</a></li>
-            <li><a href="">Privacy Policy</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
   <!-- End Footer -->
 
   <span class="cs-scrollup">
