--- a/index.html
+++ b/index.html
@@ -328,12 +328,12 @@
         <div class="cs-slider_container" data-autoplay="0" data-loop="1" data-speed="600" data-center="1" data-slides-per-view="1">
           <div class="cs-slider_wrapper">
             <div class="cs-slide">
-              <a href="portfolio-details.html" class="cs-portfolio cs-style1 cs-bg">
+              <a href="portfolio-reedwears.html" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
-                <div class="cs-portfolio_bg" data-src="assets/img/portfolio_1.jpeg"></div>
+                <div class="cs-portfolio_bg" data-src="assets/portfolio/REED/REED1.png"></div>
                 <div class="cs-portfolio_info">
                   <div class="cs-portfolio_info_bg cs-accent_bg"></div>
-                  <h2 class="cs-portfolio_title">Colorful Art Work</h2>
+                  <h2 class="cs-portfolio_title">Reed Wears Fashion</h2>
                   <div class="cs-portfolio_subtitle">See Details</div>
                 </div>
               </a>
@@ -342,10 +342,10 @@
             <div class="cs-slide">
               <a href="portfolio-details.html" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
-                <div class="cs-portfolio_bg" data-src="assets/img/portfolio_2.jpeg"></div>
+                <div class="cs-portfolio_bg" data-src="assets/portfolio/ITC/ItestifyClothing&printArtboard4.jpg"></div>
                 <div class="cs-portfolio_info">
                   <div class="cs-portfolio_info_bg cs-accent_bg"></div>
-                  <h2 class="cs-portfolio_title">Colorful Art Work</h2>
+                  <h2 class="cs-portfolio_title">Reed Wears Fashion</h2>
                   <div class="cs-portfolio_subtitle">See Details</div>
                 </div>
               </a>
@@ -357,7 +357,7 @@
                 <div class="cs-portfolio_bg" data-src="assets/img/portfolio_3.jpeg"></div>
                 <div class="cs-portfolio_info">
                   <div class="cs-portfolio_info_bg cs-accent_bg"></div>
-                  <h2 class="cs-portfolio_title">Colorful Art Work</h2>
+                  <h2 class="cs-portfolio_title">Colorful Work</h2>
                   <div class="cs-portfolio_subtitle">See Details</div>
                 </div>
               </a>
