--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     <!-- End Header Section -->
     <!-- Start Hero -->
-    <div class="cs-hero cs-style1 cs-bg cs-fixed_bg cs-shape_wrap_1" data-src="assets/img/hero_bg.jpeg" id="home">
+    <div class="cs-hero cs-style1 cs-bg cs-fixed_bg cs-shape_wrap_1" data-src="assets/img/hero-bg-alt.jpeg" id="home">
       <div class="cs-shape_1"></div>
       <div class="cs-shape_1"></div>
       <div class="cs-shape_1"></div>
@@ -188,15 +188,15 @@
           <div class="cs-funfact_shape" data-src="assets/img/funfact_shape_bg.svg"></div>
           <div class="cs-funfact_left">
             <div class="cs-funfact_heading">
-              <h2>Our fun fact</h2>
-              <p> Sed ut perspiciatis unde omnis iste natus error voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis. </p>
+              <h2>Why Trust Us?</h2>
+              <p> We are particularly passionate about helping emerging businesses stand out. We also help existing businesses maximise their market. </p>
             </div>
           </div>
           <div class="cs-funfact_right">
             <div class="cs-funfacts">
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="40" class="odometer"></span>K
+                  <span data-count-to="10" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
                   <span class="cs-accent_color">+</span>
@@ -205,7 +205,7 @@
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="50" class="odometer"></span>K
+                  <span data-count-to="20" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
                   <span class="cs-accent_color">+</span>
@@ -214,14 +214,14 @@
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="245" class="odometer"></span>
+                  <span data-count-to="3" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Team Members</p>
+                  <!-- <span class="cs-accent_color">+</span> -->
+                  <p>Competent Team Members</p>
                 </div>
               </div>
-              <div class="cs-funfact cs-style1">
+              <!-- <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
                   <span data-count-to="550" class="odometer"></span>
                 </div>
@@ -229,7 +229,7 @@
                   <span class="cs-accent_color">+</span>
                   <p>Digital products</p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -277,7 +277,7 @@
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
-                      <h2 class="cs-card_title">React.js Development</h2>
+                      <h2 class="cs-card_title">Graphic Design</h2>
                     </div>
                 </div>
                 <div class="cs-height_0 cs-height_lg_30"></div>
@@ -294,7 +294,7 @@
                 <div class="cs-height_0 cs-height_lg_30"></div>
               </div>
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
-              <div class="col-lg-3 col-sm-6">
+              <!-- <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
                   <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/service_4.jpeg" alt="Service" />
@@ -306,7 +306,7 @@
                   </a>
                 </div>
                 <div class="cs-height_0 cs-height_lg_30"></div>
-              </div>
+              </div> -->
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
             </div>
           </div>
@@ -416,7 +416,7 @@
               <div class="cs-slide">
                 <div class="cs-team cs-style1">
                   <div class="cs-member_thumb">
-                    <img src="assets/img/team/DAHCROWN EKUNDAYO STEPHEN TECH DADDY.jpg" alt="Member" />
+                    <img src="assets/img/team/DAHCROWN EKUNDAYO STEPHEN TECH DADDY.jpg" alt="EKundayo Stephen Dahcrown" />
                     <div class="cs-member_overlay"></div>
                   </div>
                   <div class="cs-member_info">
@@ -443,7 +443,7 @@
               <div class="cs-slide">
                 <div class="cs-team cs-style1">
                   <div class="cs-member_thumb">
-                    <img src="assets/img/member_2.jpeg" alt="Member" />
+                    <img src="assets/img/team/Mosesmedia.jpeg" alt="Member" />
                     <div class="cs-member_overlay"></div>
                   </div>
                   <div class="cs-member_info">
@@ -470,7 +470,7 @@
               <div class="cs-slide">
                 <div class="cs-team cs-style1">
                   <div class="cs-member_thumb">
-                    <img src="assets/img/member_3.jpeg" alt="Member" />
+                    <img src="assets/img/team/Nasir Bala.jpg" alt="Nasir Bala" />
                     <div class="cs-member_overlay"></div>
                   </div>
                   <div class="cs-member_info">
@@ -480,12 +480,7 @@
                     <div class="cs-member_designation">Illustration & Animation Artist</div>
                   </div>
                   <div class="cs-member_social cs-primary_color">
-                    <a href="#">
-                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M5.39756 18.333H1.9422V7.20581H5.39756V18.333ZM3.66802 5.68795C2.56311 5.68795 1.6669 4.77277 1.6669 3.66786C1.6669 3.13714 1.87773 2.62814 2.25301 2.25286C2.6283 1.87758 3.13729 1.66675 3.66802 1.66675C4.19875 1.66675 4.70774 1.87758 5.08302 2.25286C5.4583 2.62814 5.66913 3.13714 5.66913 3.66786C5.66913 4.77277 4.77256 5.68795 3.66802 5.68795ZM18.3298 18.333H14.8819V12.9164C14.8819 11.6255 14.8559 9.96995 13.0854 9.96995C11.2889 9.96995 11.0136 11.3725 11.0136 12.8234V18.333H7.56199V7.20581H10.876V8.72367H10.9243C11.3857 7.84941 12.5125 6.92679 14.1937 6.92679C17.6907 6.92679 18.3336 9.22962 18.3336 12.2207V18.333H18.3298Z" fill="currentColor" />
-                      </svg>
-                    </a>
-                    <a href="#">
+                    <a href="https://x.com/nasir_graphix?t=IZGyt2yh9IPEJZGGNNPKTg&s=09">
                       <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15.6204 3.60521C15.631 3.75325 15.631 3.90133 15.631 4.04938C15.631 8.56502 12.194 13.7681 5.91227 13.7681C3.97697 13.7681 2.17918 13.2076 0.666901 12.2347C0.941869 12.2664 1.20623 12.277 1.49177 12.277C3.08862 12.277 4.55861 11.7377 5.73248 10.8176C4.23078 10.7859 2.97231 9.80236 2.53872 8.44871C2.75024 8.48042 2.96173 8.50158 3.18384 8.50158C3.49051 8.50158 3.79722 8.45926 4.08273 8.38527C2.51759 8.06798 1.34369 6.69321 1.34369 5.03288V4.99059C1.79842 5.2444 2.32723 5.40303 2.88768 5.42416C1.96762 4.81078 1.36485 3.76383 1.36485 2.57939C1.36485 1.94488 1.53403 1.36324 1.83015 0.855618C3.51164 2.92838 6.03915 4.282 8.87331 4.43008C8.82045 4.17627 8.78871 3.91191 8.78871 3.64752C8.78871 1.76509 10.3116 0.231689 12.2045 0.231689C13.188 0.231689 14.0764 0.644126 14.7003 1.31037C15.4723 1.16232 16.2126 0.876777 16.8683 0.485499C16.6144 1.27867 16.0751 1.94491 15.3666 2.3679C16.054 2.2939 16.7202 2.10351 17.3336 1.83915C16.8683 2.51594 16.2867 3.11871 15.6204 3.60521V3.60521Z" fill="currentColor" />
                       </svg>
@@ -824,7 +819,7 @@
           <div class="cs-shape_1"></div>
           <div class="cs-shape_1"></div>
           <div class="cs-cta_in">
-            <h2 class="cs-cta_title cs-semi_bold cs-m0"> Let’s disscuse make <br />something <i>cool</i> together </h2>
+            <h2 class="cs-cta_title cs-semi_bold cs-m0"> Let’s discuss how to <br />create <i>the best brand </i> together </h2>
             <div class="cs-height_70 cs-height_lg_30"></div>
             <a href="contact.html" class="cs-text_btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
               <span>Apply For Meeting</span>
