--- a/photography-agency.html
+++ b/photography-agency.html
@@ -163,7 +163,7 @@
                     <a href="#">Pages</a>
                     <ul>
                       <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="https://forms.gle/4ecbbTq44cPjVN6y5">Contact</a>
                       </li>
                       <li>
                         <a href="team.html">Team</a>
