--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Laralink">
   <!-- Favicon Icon -->
-  <link rel="icon" href="assets/img/logos/dcc.png">
+ <link rel="icon" href="assets/img/favicon.png" />
   <!-- Site Title -->
   <title>Dahcrown Creations - Creative Agency</title>
   <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -245,108 +245,93 @@
   <!-- End Hero -->
   <div class="cs-height_150 cs-height_lg_80"></div>
   <!-- Start Service Section -->
-  <section class="cs-shape_wrap_4 cs-parallax">
-    <div class="cs-shape_4 cs-to_up"></div>
-    <div class="cs-shape_4 cs-to_right"></div>
+  <section id="service">
+    <div class="cs-height_150 cs-height_lg_80"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-4">
           <div class="cs-section_heading cs-style1">
             <h3 class="cs-section_subtitle">What Can We Do</h3>
             <h2 class="cs-section_title">Services we can help you with</h2>
+            <div class="cs-height_45 cs-height_lg_20"></div>
+            <a href="service.html" class="cs-text_btn wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s">
+              <span>See All Services</span>
+              <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76256 25.5303 5.46967L20.7574 0.696699C20.4645 0.403806 19.9896 0.403806 19.6967 0.696699C19.4038 0.989593 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM0 6.75H25V5.25H0V6.75Z" fill="currentColor"></path>
+              </svg>
+            </a>
           </div>
           <div class="cs-height_90 cs-height_lg_45"></div>
         </div>
         <div class="col-xl-8">
           <div class="row">
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
+            <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_1.jpeg" alt="Service">
+                  <img src="assets/img/serv_uiux.webp" alt="Service" />
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
                     <h2 class="cs-card_title">UI/UX design</h2>
                   </div>
-                </a>
+
               </div>
               <div class="cs-height_0 cs-height_lg_30"></div>
             </div>
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_2.jpeg" alt="Service">
+                  <img src="assets/img/serv_graphic.jpeg" alt="Service" />
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">React.js Development</h2>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
+                    <h2 class="cs-card_title">Graphic Design</h2>
                   </div>
-                </a>
               </div>
               <div class="cs-height_0 cs-height_lg_30"></div>
             </div>
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_3.jpeg" alt="Service">
+                  <img src="assets/portfolio/REED/REED1.png" alt="Service" />
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">Digital Marketing</h2>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
+                    <h2 class="cs-card_title">Branding</h2>
                   </div>
-                </a>
               </div>
               <div class="cs-height_0 cs-height_lg_30"></div>
             </div>
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_4.jpeg" alt="Service">
+                  <img src="assets/img/serv_videoeditor.jpeg" alt="Service" />
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
+                    <h2 class="cs-card_title">Video Editing</h2>
+                  </div>
+              </div>
+              <div class="cs-height_0 cs-height_lg_30"></div>
+            </div>
+            <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
+            <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
+            <!-- <div class="col-lg-3 col-sm-6">
+              <div class="cs-hobble">
+                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <img src="assets/img/service_4.jpeg" alt="Service" />
+                  <div class="cs-card_overlay"></div>
+                  <div class="cs-card_info">
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
                     <h2 class="cs-card_title">Technology</h2>
                   </div>
                 </a>
               </div>
               <div class="cs-height_0 cs-height_lg_30"></div>
-            </div>
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
-            <div class="col-lg-3 col-sm-6">
-              <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_5.jpeg" alt="Service">
-                  <div class="cs-card_overlay"></div>
-                  <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">Consultancy</h2>
-                  </div>
-                </a>
-              </div>
-              <div class="cs-height_0 cs-height_lg_30"></div>
-            </div>
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
-            <div class="col-lg-3 col-sm-6">
-              <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_6.jpeg" alt="Service">
-                  <div class="cs-card_overlay"></div>
-                  <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">Creative Design</h2>
-                  </div>
-                </a>
-              </div>
-              <div class="cs-height_0 cs-height_lg_30"></div>
-            </div>
+            </div> -->
+            <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
           </div>
         </div>
       </div>
     </div>
+    <div class="cs-height_150 cs-height_lg_50"></div>
   </section>
   <!-- End Service Section -->
   <div class="cs-height_150 cs-height_lg_50"></div>
@@ -1019,7 +1004,7 @@
         <div class="cs-cta_in">
           <h2 class="cs-cta_title cs-semi_bold cs-m0">Let’s disscuse make <br>something <i>cool</i> together</h2>
           <div class="cs-height_70 cs-height_lg_30"></div>
-          <a href="contact.html" class="cs-text_btn">
+          <a href="https://forms.gle/4ecbbTq44cPjVN6y5" class="cs-text_btn">
             <span>Apply For Meeting</span>
             <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M25.5307 6.53033C25.8236 6.23744 25.8236 5.76256 25.5307 5.46967L20.7577 0.696699C20.4648 0.403806 19.99 0.403806 19.6971 0.696699C19.4042 0.989593 19.4042 1.46447 19.6971 1.75736L23.9397 6L19.6971 10.2426C19.4042 10.5355 19.4042 11.0104 19.6971 11.3033C19.99 11.5962 20.4648 11.5962 20.7577 11.3033L25.5307 6.53033ZM0.000366211 6.75H25.0004V5.25H0.000366211V6.75Z" fill="currentColor"/>
