--- a/creative-portfolio.html
+++ b/creative-portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Laralink">
     <!-- Favicon Icon -->
-    <link rel="icon" href="assets/img/logos/dcc.png">
+   <link rel="icon" href="assets/img/favicon.png" />
     <!-- Site Title -->
     <title>Dahcrown Creations - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -163,7 +163,7 @@
                     <a href="#">Pages</a>
                     <ul>
                       <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="https://forms.gle/4ecbbTq44cPjVN6y5">Contact</a>
                       </li>
                       <li>
                         <a href="team.html">Team</a>
@@ -279,7 +279,7 @@
             <h1 class="cs-hero_title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
               <span class="cs-accent_color">A</span>rino Creative <br>Portfolio
             </h1>
-            <a href="contact.html" class="cs-text_btn">
+            <a href="https://forms.gle/4ecbbTq44cPjVN6y5" class="cs-text_btn">
               <span>Let's talk</span>
               <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76256 25.5303 5.46967L20.7574 0.696699C20.4645 0.403806 19.9896 0.403806 19.6967 0.696699C19.4038 0.989593 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM0 6.75H25V5.25H0V6.75Z" fill="currentColor" />
@@ -703,7 +703,7 @@
           <div class="cs-cta_in">
             <h2 class="cs-cta_title cs-semi_bold cs-m0">Let’s disscuse make <br>something <i>cool</i> together </h2>
             <div class="cs-height_70 cs-height_lg_30"></div>
-            <a href="contact.html" class="cs-text_btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+            <a href="https://forms.gle/4ecbbTq44cPjVN6y5" class="cs-text_btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
               <span>Apply For Meeting</span>
               <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M25.5307 6.53033C25.8236 6.23744 25.8236 5.76256 25.5307 5.46967L20.7577 0.696699C20.4648 0.403806 19.99 0.403806 19.6971 0.696699C19.4042 0.989593 19.4042 1.46447 19.6971 1.75736L23.9397 6L19.6971 10.2426C19.4042 10.5355 19.4042 11.0104 19.6971 11.3033C19.99 11.5962 20.4648 11.5962 20.7577 11.3033L25.5307 6.53033ZM0.000366211 6.75H25.0004V5.25H0.000366211V6.75Z" fill="currentColor" />
