--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Laralink" />
     <!-- Favicon Icon -->
-    <link rel="icon" href="assets/img/logos/DCC-WHITE.png" />
+    <link rel="icon" href="assets/img/favicon.png" />
     <!-- Site Title -->
     <title>Dahcrown Creations - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
@@ -145,7 +145,7 @@
     </div>
     <!-- End Header Section -->
     <!-- Start Hero -->
-    <div class="cs-hero cs-style1 cs-bg cs-fixed_bg cs-shape_wrap_1" data-src="assets/img/hero-bg-alt.jpeg" id="home">
+    <div class="cs-hero cs-style1 cs-bg cs-fixed_bg cs-shape_wrap_1" data-src="assets/img/hero_bg_6.webp" id="home">
       <div class="cs-shape_1"></div>
       <div class="cs-shape_1"></div>
       <div class="cs-shape_1"></div>
@@ -154,7 +154,7 @@
           <h1 class="cs-hero_title wow fadeInRight" data-wow-duration="0.8s" data-wow-delay="0.2s"> Creating the business <br />you dream of </h1>
           <div class="cs-hero_info">
             <div>
-              <a href="contact.html" class="cs-text_btn">
+              <a href="https://forms.gle/4ecbbTq44cPjVN6y5" class="cs-text_btn">
                 <span>Get a Quote</span>
                 <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76256 25.5303 5.46967L20.7574 0.696699C20.4645 0.403806 19.9896 0.403806 19.6967 0.696699C19.4038 0.989593 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM0 6.75H25V5.25H0V6.75Z" fill="currentColor" />
@@ -257,10 +257,10 @@
           </div>
           <div class="col-xl-8">
             <div class="row">
-              <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
+              <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                    <img src="assets/img/service_1.jpeg" alt="Service" />
+                    <img src="assets/img/serv_uiux.webp" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
@@ -270,10 +270,9 @@
                 </div>
                 <div class="cs-height_0 cs-height_lg_30"></div>
               </div>
-              <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                    <img src="assets/img/service_2.jpeg" alt="Service" />
+                    <img src="assets/img/serv_graphic.jpeg" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
@@ -284,16 +283,28 @@
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                    <img src="assets/img/service_3.jpeg" alt="Service" />
+                    <img src="assets/portfolio/REED/REED1.png" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
-                      <h2 class="cs-card_title">Digital Marketing</h2>
+                      <h2 class="cs-card_title">Branding</h2>
                     </div>
                 </div>
                 <div class="cs-height_0 cs-height_lg_30"></div>
               </div>
-              <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
+              <div class="col-lg-3 col-sm-6">
+                <div class="cs-hobble">
+                    <img src="assets/img/serv_videoeditor.jpeg" alt="Service" />
+                    <div class="cs-card_overlay"></div>
+                    <div class="cs-card_info">
+                      <span class="cs-hover_layer3 cs-accent_bg"></span>
+                      <h2 class="cs-card_title">Video Editing</h2>
+                    </div>
+                </div>
+                <div class="cs-height_0 cs-height_lg_30"></div>
+              </div>
+              <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
+              <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
               <!-- <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
                   <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
@@ -307,7 +318,7 @@
                 </div>
                 <div class="cs-height_0 cs-height_lg_30"></div>
               </div> -->
-              <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
+              <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
             </div>
           </div>
         </div>
@@ -372,9 +383,6 @@
     </section>
     <!-- End Latest Project -->
     <div class="cs-height_150 cs-height_lg_80"></div>
-
-
-
     <div class="cs-height_130 cs-height_lg_70"></div>
     <!-- Start General Text -->
     <div class="container">
@@ -821,7 +829,7 @@
           <div class="cs-cta_in">
             <h2 class="cs-cta_title cs-semi_bold cs-m0"> Let’s discuss how to <br />create <i>the best brand </i> together </h2>
             <div class="cs-height_70 cs-height_lg_30"></div>
-            <a href="contact.html" class="cs-text_btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+            <a href="https://forms.gle/4ecbbTq44cPjVN6y5" class="cs-text_btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
               <span>Apply For Meeting</span>
               <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M25.5307 6.53033C25.8236 6.23744 25.8236 5.76256 25.5307 5.46967L20.7577 0.696699C20.4648 0.403806 19.99 0.403806 19.6971 0.696699C19.4042 0.989593 19.4042 1.46447 19.6971 1.75736L23.9397 6L19.6971 10.2426C19.4042 10.5355 19.4042 11.0104 19.6971 11.3033C19.99 11.5962 20.4648 11.5962 20.7577 11.3033L25.5307 6.53033ZM0.000366211 6.75H25.0004V5.25H0.000366211V6.75Z" fill="currentColor" />
