--- a/case-study-showcase.html
+++ b/case-study-showcase.html
@@ -130,7 +130,7 @@
                 <li class="menu-item-has-children"><a href="service.html">Services</a>
                   <ul>
                     <li><a href="service.html">Services</a></li>
-                    <li><a href="service-details.html">Service Details</a></li>
+                    <li><a href="service.html">Service Details</a></li>
                   </ul>
                 </li>
                 <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a>
