--- a/digital-agency.html
+++ b/digital-agency.html
@@ -129,7 +129,7 @@
                 <li class="menu-item-has-children"><a href="service.html">Services</a>
                   <ul>
                     <li><a href="service.html">Services</a></li>
-                    <li><a href="service-details.html">Service Details</a></li>
+                    <li><a href="service.html">Service Details</a></li>
                   </ul>
                 </li>
                 <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a>
@@ -320,15 +320,15 @@
     <div class="cs-height_65 cs-height_lg_45"></div>
     <div class="cs-moving_text_wrap cs-type1 cs-bold cs-primary_font">
       <div class="cs-moving_text_in">
-        <div class="cs-moving_text"><a href="service-details.html">UI/UX Design</a>-<a href="service-details.html">Marketing</a>-<a href="service-details.html">Branding</a>-</div>
-        <div class="cs-moving_text"><a href="service-details.html">UI/UX Design</a>-<a href="service-details.html">Marketing</a>-<a href="service-details.html">Branding</a>-</div>
+        <div class="cs-moving_text"><a href="service.html">UI/UX Design</a>-<a href="service.html">Marketing</a>-<a href="service.html">Branding</a>-</div>
+        <div class="cs-moving_text"><a href="service.html">UI/UX Design</a>-<a href="service.html">Marketing</a>-<a href="service.html">Branding</a>-</div>
       </div>
     </div>
     <div class="cs-height_30 cs-height_lg_10"></div>
     <div class="cs-moving_text_wrap cs-type1 cs-bold cs-primary_font">
       <div class="cs-moving_text_in">
-        <div class="cs-moving_text cs-reverse_animation"><a href="service-details.html">SEO</a>-<a href="service-details.html">App design</a>-<a href="service-details.html">React Developer</a>-</div>
-        <div class="cs-moving_text cs-reverse_animation"><a href="service-details.html">SEO</a>-<a href="service-details.html">App design</a>-<a href="service-details.html">React Developer</a>-</div>
+        <div class="cs-moving_text cs-reverse_animation"><a href="service.html">SEO</a>-<a href="service.html">App design</a>-<a href="service.html">React Developer</a>-</div>
+        <div class="cs-moving_text cs-reverse_animation"><a href="service.html">SEO</a>-<a href="service.html">App design</a>-<a href="service.html">React Developer</a>-</div>
       </div>
     </div>
   </section>
@@ -954,16 +954,16 @@
                 <h2 class="cs-widget_title">Services</h2>
                 <ul class="cs-menu_widget cs-mp0">
                   <li>
-                    <a href="service-details.html">Business and Personal Branding</a>
+                    <a href="service.html">Business and Personal Branding</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Web development</a>
+                    <a href="service.html">Web development</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Writing </a>
+                    <a href="service.html">Writing </a>
                   </li>
                   <li>
-                    <a href="service-details.html">Marketing and Business Consultancy</a>
+                    <a href="service.html">Marketing and Business Consultancy</a>
                   </li>
                 </ul>
               </div>
