--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Laralink" />
-    <!-- Favicon Icon -->
     <link rel="icon" href="assets/img/favicon.png" />
-    <!-- Site Title -->
     <title>Dahcrown Creations - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/plugins/lightgallery.min.css" />
@@ -40,17 +37,9 @@
                   <li>
                     <a href="about.html">About</a>
                   </li>
-                  <li class="menu-item-has-children">
-                    <a href="service.html">Services</a>
-                    <ul>
-                      <li>
-                        <a href="service.html">Services</a>
-                      </li>
-                      <li>
-                        <a href="service-details.html">Service Details</a>
-                      </li>
-                    </ul>
-                  </li>
+                    <li>
+                      <a href="service.html">Services</a>
+                    </li>
                   <li class="menu-item-has-children">
                     <a href="portfolio.html">Portfolio</a>
                     <ul>
@@ -61,6 +50,9 @@
                         <a href="portfolio-details.html">Portfolio Details</a>
                       </li>
                     </ul>
+                  </li>
+                  <li cs-mega_menu">
+                    <a href="showcase-portfolio.html">Showcase</a>
                   </li>
                 </ul>
               </div>
@@ -307,7 +299,7 @@
               <!-- <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div> -->
               <!-- <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="service.html" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/service_4.jpeg" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -339,7 +331,7 @@
         <div class="cs-slider_container" data-autoplay="0" data-loop="1" data-speed="600" data-center="1" data-slides-per-view="1">
           <div class="cs-slider_wrapper">
             <div class="cs-slide">
-              <a href="portfolio-reedwears.html" class="cs-portfolio cs-style1 cs-bg">
+              <a href="reedwears.html" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
                 <div class="cs-portfolio_bg" data-src="assets/portfolio/REED/REED1.png"></div>
                 <div class="cs-portfolio_info">
@@ -351,7 +343,7 @@
             </div>
             <!-- .cs-slide -->
             <div class="cs-slide">
-              <a href="portfolio-details.html" class="cs-portfolio cs-style1 cs-bg">
+              <a href="portfolio.html" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
                 <div class="cs-portfolio_bg" data-src="assets/portfolio/ITC/ItestifyClothing&printArtboard4.jpg"></div>
                 <div class="cs-portfolio_info">
@@ -363,7 +355,7 @@
             </div>
             <!-- .cs-slide -->
             <div class="cs-slide">
-              <a href="portfolio-details.html" class="cs-portfolio cs-style1 cs-bg">
+              <a href="portfolio.html" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
                 <div class="cs-portfolio_bg" data-src="assets/img/portfolio_3.jpeg"></div>
                 <div class="cs-portfolio_info">
@@ -478,12 +470,12 @@
               <div class="cs-slide">
                 <div class="cs-team cs-style1">
                   <div class="cs-member_thumb">
-                    <img src="assets/img/team/Nasir Bala.jpg" alt="Nasir Bala" />
+                    <img src="assets/img/team/Nasir Bala.jpg" alt="Nasir Mustapha Bala" />
                     <div class="cs-member_overlay"></div>
                   </div>
                   <div class="cs-member_info">
                     <h2 class="cs-member_name">
-                      <a href="team-details.html">Nasir Bala</a>
+                      <a href="team-details.html">Nasir Mustapha Bala</a>
                     </h2>
                     <div class="cs-member_designation">Illustration & Animation Artist</div>
                   </div>
@@ -496,7 +488,8 @@
                   </div>
                 </div>
               </div>
-              <div class="cs-slide">
+              <!-- UNCOMMENT FOR EXTRA TEAM MEMBERS  -->
+              <!-- <div class="cs-slide">
                 <div class="cs-team cs-style1">
                   <div class="cs-member_thumb">
                     <img src="assets/img/member_1.jpeg" alt="Member" />
@@ -531,10 +524,7 @@
                     </a>
                   </div>
                 </div>
-              </div>
-
-
-              <!-- UNCOMMENT FOR EXTRA TEAM MEMBERS  -->
+              </div> -->
               <!-- .cs-slide -->
               <!-- <div class="cs-slide">
                 <div class="cs-team cs-style1">
@@ -587,7 +577,7 @@
     <!-- End Team Section -->
     <div class="cs-height_150 cs-height_lg_80"></div>
     <!-- Start Testimonial Section -->
-    <section class="cs-gradient_bg_1 cs-shape_wrap_3 cs-parallax">
+    <!-- <section class="cs-gradient_bg_1 cs-shape_wrap_3 cs-parallax">
       <div class="cs-shape_3 cs-to_up">
         <svg width="162" height="181" viewBox="0 0 162 181" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M156.833 178.434C156.833 177.053 157.954 175.932 159.335 175.932C160.716 175.932 161.837 177.053 161.837 178.434C161.837 179.814 160.716 180.935 159.335 180.935C157.954 180.935 156.833 179.814 156.833 178.434Z" fill="#FF4A17" />
@@ -786,14 +776,14 @@
         </div>
       </div>
       <div class="cs-height_130 cs-height_lg_80"></div>
-    </section>
+    </section> -->
     <!-- End Testimonial Section -->
 
     <!-- End Moving Text -->
     <div class="cs-moving_text_wrap cs-bold cs-primary_font">
       <div class="cs-moving_text_in">
-        <div class="cs-moving_text">Our reputed world wide partners</div>
-        <div class="cs-moving_text">Our reputed world wide partners</div>
+        <div class="cs-moving_text">Brands we have helped build</div>
+        <div class="cs-moving_text">Businesses we've worked with</div>
       </div>
     </div>
     <div class="cs-height_100 cs-height_lg_70"></div>
@@ -801,19 +791,16 @@
     <div class="container">
       <div class="cs-partner_logo_wrap">
         <div class="cs-partner_logo">
-          <img src="assets/img/partner_1.svg" alt="Partner" />
+          <img src="assets/img/partners/seoanibeh.png" alt="Partner" />
         </div>
         <div class="cs-partner_logo">
-          <img src="assets/img/partner_2.svg" alt="Partner" />
+          <img src="assets/img/partners/reed.png" alt="Partner" />
         </div>
         <div class="cs-partner_logo">
-          <img src="assets/img/partner_3.svg" alt="Partner" />
+          <img src="assets/img/partners/Refined Looks.png" alt="Partner" />
         </div>
         <div class="cs-partner_logo">
-          <img src="assets/img/partner_4.svg" alt="Partner" />
-        </div>
-        <div class="cs-partner_logo">
-          <img src="assets/img/partner_5.svg" alt="Partner" />
+          <img src="assets/img/partners/OLASILE WHITEONBLACK.png" alt="Partner" />
         </div>
       </div>
     </div>
@@ -885,16 +872,16 @@
                 <h2 class="cs-widget_title">Services</h2>
                 <ul class="cs-menu_widget cs-mp0">
                   <li>
-                    <a href="service-details.html">Business and Personal Branding</a>
+                    <a href="service.html">Business and Personal Branding</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Web development</a>
+                    <a href="service.html">Web development</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Writing </a>
+                    <a href="service.html">Writing </a>
                   </li>
                   <li>
-                    <a href="service-details.html">Marketing and Business Consultancy</a>
+                    <a href="service.html">Marketing and Business Consultancy</a>
                   </li>
                 </ul>
               </div>
