--- a/marketing-agency.html
+++ b/marketing-agency.html
@@ -129,7 +129,7 @@
                 <li class="menu-item-has-children"><a href="service.html">Services</a>
                   <ul>
                     <li><a href="service.html">Services</a></li>
-                    <li><a href="service-details.html">Service Details</a></li>
+                    <li><a href="service.html">Service Details</a></li>
                   </ul>
                 </li>
                 <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a>
@@ -284,7 +284,7 @@
     <div class="container">
       <div class="cs-iconbox_3_list">
         <div class="cs-hover_tab active">
-          <a href="service-details.html" class="cs-iconbox cs-style3">
+          <a href="service.html" class="cs-iconbox cs-style3">
             <div class="cs-image_layer cs-style1 cs-size_md">
               <div class="cs-image_layer_in">
                 <img src="assets/img/service_7.jpeg" alt="Image" class="w-100 cs-radius_15">
@@ -302,7 +302,7 @@
           </a>
         </div>
         <div class="cs-hover_tab">
-          <a href="service-details.html" class="cs-iconbox cs-style3">
+          <a href="service.html" class="cs-iconbox cs-style3">
             <div class="cs-image_layer cs-style1 cs-size_md">
               <div class="cs-image_layer_in">
                 <img src="assets/img/service_8.jpeg" alt="Image" class="w-100 cs-radius_15">
@@ -320,13 +320,13 @@
           </a>
         </div>
         <div class="cs-hover_tab">
-          <a href="service-details.html" class="cs-iconbox cs-style3">
+          <a href="service.html" class="cs-iconbox cs-style3">
             <div class="cs-image_layer cs-style1 cs-size_md">
               <div class="cs-image_layer_in">
                 <img src="assets/img/service_9.jpeg" alt="Image" class="w-100 cs-radius_15">
               </div>
             </div>
-            <span href="service-details.html" class="cs-iconbox_icon cs-center">
+            <span href="service.html" class="cs-iconbox_icon cs-center">
               <svg width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M29.3803 3.05172C29.4089 1.94752 28.537 1.02921 27.4328 1.00062L9.43879 0.534749C8.33459 0.506159 7.41628 1.37811 7.38769 2.48231C7.35911 3.58651 8.23106 4.50482 9.33526 4.53341L25.3299 4.94752L24.9158 20.9422C24.8872 22.0464 25.7592 22.9647 26.8634 22.9933C27.9676 23.0218 28.8859 22.1499 28.9144 21.0457L29.3803 3.05172ZM3.37714 28.5502L28.7581 4.4503L26.0039 1.54961L0.622863 25.6495L3.37714 28.5502Z" fill="currentColor"/>
               </svg>                  
@@ -338,7 +338,7 @@
           </a>
         </div>
         <div class="cs-hover_tab">
-          <a href="service-details.html" class="cs-iconbox cs-style3">
+          <a href="service.html" class="cs-iconbox cs-style3">
             <div class="cs-image_layer cs-style1 cs-size_md">
               <div class="cs-image_layer_in">
                 <img src="assets/img/service_10.jpeg" alt="Image" class="w-100 cs-radius_15">
@@ -1368,16 +1368,16 @@
                 <h2 class="cs-widget_title">Services</h2>
                 <ul class="cs-menu_widget cs-mp0">
                   <li>
-                    <a href="service-details.html">Business and Personal Branding</a>
+                    <a href="service.html">Business and Personal Branding</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Web development</a>
+                    <a href="service.html">Web development</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Writing </a>
+                    <a href="service.html">Writing </a>
                   </li>
                   <li>
-                    <a href="service-details.html">Marketing and Business Consultancy</a>
+                    <a href="service.html">Marketing and Business Consultancy</a>
                   </li>
                 </ul>
               </div>
