--- a/photography-agency.html
+++ b/photography-agency.html
@@ -126,17 +126,9 @@
                   <li>
                     <a href="about.html">About</a>
                   </li>
-                  <li class="menu-item-has-children">
-                    <a href="service.html">Services</a>
-                    <ul>
-                      <li>
-                        <a href="service.html">Services</a>
-                      </li>
-                      <li>
-                        <a href="service-details.html">Service Details</a>
-                      </li>
-                    </ul>
-                  </li>
+                    <li>
+                      <a href="service.html">Services</a>
+                    </li>
                   <li class="menu-item-has-children">
                     <a href="portfolio.html">Portfolio</a>
                     <ul>
@@ -278,25 +270,25 @@
           <div class="cs-hero_tab_item cs-hover_tab active">
             <div class="cs-hero_tab_img cs-bg" data-src="assets/img/wedding.jpeg"></div>
             <h2>
-              <a href="service-details.html">Wedding</a>
+              <a href="service.html">Wedding</a>
             </h2>
           </div>
           <div class="cs-hero_tab_item cs-hover_tab">
             <div class="cs-hero_tab_img cs-bg" data-src="assets/img/fashion.jpeg"></div>
             <h2>
-              <a href="service-details.html">Fashion</a>
+              <a href="service.html">Fashion</a>
             </h2>
           </div>
           <div class="cs-hero_tab_item cs-hover_tab">
             <div class="cs-hero_tab_img cs-bg" data-src="assets/img/commercial.jpeg"></div>
             <h2>
-              <a href="service-details.html">Commercial</a>
+              <a href="service.html">Commercial</a>
             </h2>
           </div>
           <div class="cs-hero_tab_item cs-hover_tab">
             <div class="cs-hero_tab_img cs-bg" data-src="assets/img/landscape.jpeg"></div>
             <h2>
-              <a href="service-details.html">Landscape</a>
+              <a href="service.html">Landscape</a>
             </h2>
           </div>
         </div>
@@ -366,7 +358,7 @@
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="service.html" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/service_1.jpeg" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -380,7 +372,7 @@
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="service.html" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/service_2.jpeg" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -393,7 +385,7 @@
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="service.html" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/service_3.jpeg" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -407,7 +399,7 @@
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="service.html" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/service_4.jpeg" alt="Service" />
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -1554,16 +1546,16 @@
                 <h2 class="cs-widget_title">Services</h2>
                 <ul class="cs-menu_widget cs-mp0">
                   <li>
-                    <a href="service-details.html">UI/UX design</a>
+                    <a href="service.html">UI/UX design</a>
                   </li>
                   <li>
-                    <a href="service-details.html">WP development</a>
+                    <a href="service.html">WP development</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Digital marketing</a>
+                    <a href="service.html">Digital marketing</a>
                   </li>
                   <li>
-                    <a href="service-details.html">React development</a>
+                    <a href="service.html">React development</a>
                   </li>
                 </ul>
               </div>
