--- a/blog-details.html
+++ b/blog-details.html
@@ -126,17 +126,9 @@
                   <li>
                     <a href="about.html">About</a>
                   </li>
-                  <li class="menu-item-has-children">
-                    <a href="service.html">Services</a>
-                    <ul>
-                      <li>
-                        <a href="service.html">Services</a>
-                      </li>
-                      <li>
-                        <a href="service-details.html">Service Details</a>
-                      </li>
-                    </ul>
-                  </li>
+                    <li>
+                      <a href="service.html">Services</a>
+                    </li>
                   <li class="menu-item-has-children">
                     <a href="portfolio.html">Portfolio</a>
                     <ul>
@@ -555,16 +547,16 @@
                 <h2 class="cs-widget_title">Services</h2>
                 <ul class="cs-menu_widget cs-mp0">
                   <li>
-                    <a href="service-details.html">UI/UX design</a>
+                    <a href="service.html">UI/UX design</a>
                   </li>
                   <li>
-                    <a href="service-details.html">WP development</a>
+                    <a href="service.html">WP development</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Digital marketing</a>
+                    <a href="service.html">Digital marketing</a>
                   </li>
                   <li>
-                    <a href="service-details.html">React development</a>
+                    <a href="service.html">React development</a>
                   </li>
                 </ul>
               </div>
