--- a/team.html
+++ b/team.html
@@ -129,7 +129,7 @@
                 <li class="menu-item-has-children"><a href="service.html">Services</a>
                   <ul>
                     <li><a href="service.html">Services</a></li>
-                    <li><a href="service-details.html">Service Details</a></li>
+                    <li><a href="service.html">Service Details</a></li>
                   </ul>
                 </li>
                 <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a>
@@ -608,16 +608,16 @@
                 <h2 class="cs-widget_title">Services</h2>
                 <ul class="cs-menu_widget cs-mp0">
                   <li>
-                    <a href="service-details.html">Business and Personal Branding</a>
+                    <a href="service.html">Business and Personal Branding</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Web development</a>
+                    <a href="service.html">Web development</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Writing </a>
+                    <a href="service.html">Writing </a>
                   </li>
                   <li>
-                    <a href="service-details.html">Marketing and Business Consultancy</a>
+                    <a href="service.html">Marketing and Business Consultancy</a>
                   </li>
                 </ul>
               </div>
